code refactoring after PR comments: record, lombok, pom spring-boot-starter-web version